--- a/config/config_classification/train_config.yaml
+++ b/config/config_classification/train_config.yaml
@@ -27,7 +27,7 @@ data:
   fat_split:
     enabled: true
     bin_edges: [0.0, 0.05, 0.15, 0.25, 1.0]
-    split_file: "data_splits_fatassigned.json"
+    split_file: "data_splits_fatassigned_filtered.json"
     seed: 42
   train_ratio: 0.7
   val_ratio: 0.15
